@@ -9,6 +9,7 @@
  * Student-related shortcodes.
  */
 class CoursePress_Data_Shortcode_Student {
+	private static $templates_was_already_loaded = true;
 
 	/**
 	 * Register the shortcodes.
